--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # requirements.txt
 streamlit==1.28.1
-kiteconnect==4.0.1
+kiteconnect==5.0.1
 pandas==2.0.3
 plotly==5.15.0
 numpy==1.25.2
-ta-lib==0.4.28  # May require separate installation for wheels on some systems
+pandas_ta==0.4.71b0
