--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # requirements.txt
 # Compatible with Python 3.13.7 and standard pip installation
-# Removed pandas_ta to avoid dependency conflicts
 # Uses kiteconnect==5.0.1 (latest stable version)
-# Adjusted pandas to a version compatible with Python 3.13.7
+# pandas==2.2.3 for Python 3.13.7 compatibility
+# No pandas_ta to avoid import errors and conflicts
 
 streamlit==1.28.1
 kiteconnect==5.0.1
